@@ -195,7 +195,13 @@ tools = {
                 $this = $(this),
                 prestashop_carrier_id = packeteryModulesManager.getCarrierId($this),
                 $extra = packeteryModulesManager.getWidgetParent($this);
-          
+
+            setTimeout(function () {
+                if ($this.is(':checked') && $extra.length === 1 && !$extra.is(':visible')) {
+                    $extra.parent().slideDown();
+                }
+            }, 500);
+
             // if selected carrier is not Packetery then enable Continue button and we're done here
             if (! $extra.find('#packetery-widget').length) {
                 module.enableSubmitButton();
